--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 try {
                     // As suas chaves do Firebase
                     const firebaseConfig = {
-                      apiKey: "AIzaSyCAZhHTbSY8fWgE4G-qW_LFv0dq-HoRmnE",
+                      apiKey: "AIzaSyCAZhHTbSY8fWgE4G-qW_LFv0dq-HoRmnE", // CHAVE ATUALIZADA
                       authDomain: "mariex-9672c.firebaseapp.com",
                       projectId: "mariex-9672c",
                       storageBucket: "mariex-9672c.appspot.com",
